# teloxide-structure-example

./: Cargo.toml  README.md
src/: error.rs  main.rs  prelude.rs
src/core/: admin.rs  mod.rs  user.rs
