[package]
name = "teloxide-structure-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.39"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
