[package]
name = "teloxide-structure-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
thiserror = "1.0.58"
pretty_env_logger = "0.5.0"
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "fb2865b", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
